<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".EditarFragment"
    android:background="@color/yellowgreen"
    android:layout_gravity="center_horizontal">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="344dp"
        android:layout_height="32dp"
        android:layout_marginBottom="46dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:gravity="center_horizontal"
        android:text="@string/EditarP"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="332dp"
        android:layout_height="47dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/bguardar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5">

        <CheckBox
            android:id="@+id/chmatematica"
            android:layout_width="126dp"
            android:layout_height="28dp"
            android:layout_weight="1"
            android:text="@string/Mate" />

        <CheckBox
            android:id="@+id/chfisica"
            android:layout_width="121dp"
            android:layout_height="28dp"
            android:layout_weight="1"
            android:text="@string/fisica" />

        <CheckBox
            android:id="@+id/chsociales"
            android:layout_width="98dp"
            android:layout_height="28dp"
            android:layout_weight="1"
            android:text="@string/social" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="38dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="46dp"
        android:ems="10"
        android:text="@string/easesor"
        android:textColor="@color/black"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/bsalir"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="117dp"
        android:text="@string/salir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bguardar" />

    <ImageButton
        android:id="@+id/bguardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="23dp"
        android:background="@color/yellowgreen"
        android:src="@android:drawable/ic_menu_save"
        app:layout_constraintBottom_toTopOf="@+id/bsalir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</android.support.constraint.ConstraintLayout>