<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="1dp"
    android:id="@+id/click"
    tools:context=".GeneralesFragment"
    android:background="@color/orange"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tPregunta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Pregunta"
            android:textColor="@color/white"
            android:gravity="center_horizontal"
            android:textSize="21sp"
            android:layout_weight="6"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="1"
            android:background="@color/goldenrod">

            <TextView
                android:id="@+id/tUsuario"
                android:layout_width="226dp"
                android:layout_height="wrap_content"
                android:text="@string/Usuario"
                android:textColor="@color/white"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Fecha"
                android:textColor="@color/white"
                android:textSize="10sp"/>

        </LinearLayout>


    </LinearLayout>


</LinearLayout>
