<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:padding="1dp"
        android:id="@+id/click"
        tools:context=".RespuestasFragment"
        android:background="@color/orangered"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tRespuesta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Respuesta"
                android:textColor="@color/white"
                android:textSize="21sp"
                android:layout_weight="6"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1"
                android:background="@color/chocolate">

                <TextView
                    android:id="@+id/tUsuario"
                    android:layout_width="226dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Usuario"
                    android:textColor="@color/white"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Fecha"
                    android:textColor="@color/white"
                    android:textSize="10sp"/>

            </LinearLayout>


        </LinearLayout>


    </LinearLayout>
